feat: adicionando bloco de ruby

--- a/src/main/resources/assets/ohiomod/lang/en_us.json
+++ b/src/main/resources/assets/ohiomod/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.ohiomod.ruby": "Ruby"
+  "item.ohiomod.ruby": "Ruby",
+  "item.ohiomod.ruby_block": "Block of Ruby",
+
+  "itemgroup.ruby": "OhioMod"
 }
