--- a/src/main/resources/assets/ohiomod/lang/en_us.json
+++ b/src/main/resources/assets/ohiomod/lang/en_us.json
@@ -1,7 +1,8 @@
 {
   "item.ohiomod.ruby": "Ruby",
-  "block.ohiomod.ruby_block": "Block of Ruby",
-  "block.ohiomod.ruby_ore": "Block of Ruby Ore",
+  "block.ohiomod.ruby_block": "Ruby Block",
+  "block.ohiomod.ruby_ore": "Ruby Ore",
+  "block.ohiomod.deepslate_ruby_ore": "Ruby Ore",
 
   "itemgroup.ruby": "OhioMod"
 }
